--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
+		"start": "nodemon server.js",
+		"client": "npm start --prefix front-end",
+		"clientInstall": "npm install --prefix front-end",
+		"dev": "concurrently \"npm start\" \"npm run client\""
 	},
 	"keywords": [],
 	"author": "Roman Pelikh",
