--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,24 @@ node_modules
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+/front-end/node_modules
+/front-end/.pnp
+/front-end/.pnp.js
 
 # testing
 /coverage
 
 # production
-/build
+/front-end//build
+
+
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/front-end/.DS_Store
+/front-end/.env.local
+/front-end/.env.development.local
+/front-end/.env.test.local
+/front-end/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
